--- a/mensaje.html
+++ b/mensaje.html
@@ -15,36 +15,28 @@
         .encabezado{
             background-color: #0b6c9d;
             text-align: center;
-            padding: 1em;
-
             display: flex;
+            padding: 1em;
         }
 
-        .contenedorImagen{
-            width: 20%;
-            display: inline-block;
-            text-align: center;
-            vertical-align: middle;
+        .encabezado img{
+            height: 100px;
         }
 
         .contenedorTitulo{
             width: 80%;
+            height: 100%;
             color: white;
+            text-align: center;
         }
 
         .titulo{
-            font-size: 110%;
+            font-size: 120%;
             font-weight: 300;
         }
 
         .bienvenido{
             font-size: 100%;
-        }
-
-        .encabezado .contenedorImagen img{
-            width: 72px;
-            height: 55px;
-            margin-top: 1.25em;
         }
         
         .cuerpo{
@@ -78,14 +70,17 @@
 <body class="body-mensaje">
     <div class = "encabezado">
 
-        <div class="contenedorImagen">
+        <!--<div class="contenedorImagen">
             <img src="https://i.imgur.com/Zg3Lp2z.png" alt="logo-escom-blanco"/>
-        </div>
+        </div>-->
+
+        <img src="https://i.imgur.com/mc5ZWUt.png" alt="">
 
         <div class="contenedorTitulo">
             <p class="titulo">Escuela Superior de Cómputo</p>
             <p class="bienvenido">¡Bienvenido!</p>
         </div>
+
     </div>
     <div class = "cuerpo">
         <p>
@@ -107,7 +102,6 @@
         <div class="pieMensaje">
             <strong>© Todos los derechos reservados a la Escuela Superior de Cómputo</strong>
         </div>
-
     </div>
 </body>
 </html>
