--- a/buscar.html
+++ b/buscar.html
@@ -34,6 +34,9 @@
     <script src="/../Proyecto WEB/js/validacionForm.js"></script>
     <script src="/../Proyecto WEB/js/valForm.js"></script>
 
+    <!-- Icono de pagina -->
+    <link rel="icon" href="/../Proyecto WEB/img/icono.png">
+
     <title>Buscar Alumno</title>
 </head>
 <script src="/../Proyecto WEB/js/validarCampo.js"></script>
