--- a/login.html
+++ b/login.html
@@ -25,6 +25,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 
+    <!-- Icono de pagina -->
+    <link rel="icon" href="/../Proyecto WEB/img/icono.png">
+
     <title>Login</title>
 </head>
 
